# calculus-done-right

./: .env  .gitignore  README.md  next.config.mjs  package.json  preprocess-mdx.cjs
backend/: .env  Dockerfile  calculus-done-right.service  deployment.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  crud.py  google_monkey.py  main.py  models.py  schemas.py
components/: Button.module.css  Button.tsx  Card.tsx  CircleArea.tsx  FT1.tsx  HomeAnimation.tsx  Layout.module.css  Layout.tsx  LessonLayout.tsx  LessonList.tsx  Navbar.module.css  Navbar.tsx  RenderedText.tsx  ReviewArea.module.css  ReviewArea.tsx  Survey.module.css  Survey.tsx
components/cards/: CardMemory.module.css  CardMemory.tsx  CardMult.module.css  CardMult.tsx
lib/: api.ts  cards.ts  config.ts  google.ts  lesson.ts  store.ts  utils.ts
pages/: _app.tsx  about.mdx  index.tsx  review.tsx  survey.mdx
pages/lesson/: derivative-limit.mdx  derivative-linearity.mdx  derivatives-of-poly.mdx  limits-intro.mdx  power-rule.mdx
styles/: globals.css  vars.css
